# libuefi

./: CMakeLists.txt  README.md  cfile.py  library.h  prologue.txt
app/: CMakeLists.txt  main.cpp
include/uefi/: table.hpp  types.hpp
include/uefi/protocols/: simple_text_input_protocol.hpp  simple_text_output_protocol.hpp
include/uefi/services/: boot.hpp
include/uefi/services/boot/: event_timer_task.hpp  image.hpp  memory.hpp  miscellaneous.hpp  protocol.hpp
include/uefi/utils/: function.hpp
src/: uefi.cpp
test/: CMakeLists.txt
